# simulacrum

./: .gitignore  COPYRIGHT  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.db
src/simulacrum/: api.py  fake_data_helpers.py  i2b2.py  main.py  utils.py
tests/: simple_trial.py
