[tool.poetry]
name = "simulacrum"
version = "0.1.dev0"
description = "declarative framework for in silico trials"
authors = ["Tyler M Kontra <tyler@havercene.io>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.12"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
